Add some comments on things don't work on windows.

--- a/stash.1
+++ b/stash.1
@@ -151,6 +151,8 @@ encrypting/decrypting data.
 The salt stored during \f[C]stash create\f[R] is also used for hashing
 any data for indexing purposes.
 .SS Browsing
+.PP
+This feature does not currently work on windows.
 .SS Terminal user interface (default)
 .IP
 .nf
