Add docstrings to pod functions + clean up scripting code.

--- a/stash.1
+++ b/stash.1
@@ -348,7 +348,7 @@ Pod Protocol (https://github.com/babashka/pods#the-protocol).
 .PP
 If you are familiar with clojure (https://clojure.org/) or
 babashka (https://github.com/borkdude/babashka), see
-babashka-example (https://github.com/rorokimdim/stash/tree/master/scripting-examples/babashka).
+clojure-example (https://github.com/rorokimdim/stash/tree/master/scripting-examples/clojure).
 .PP
 Common-lisp folks see
 common-lisp-example (https://github.com/rorokimdim/stash/tree/master/scripting-examples/common-lisp).
